// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modal-title-buttons Renders \`modal-title-buttons\` with custom props 1`] = `
<div
  class="modal-title-buttons close minimize"
>
  <div
    class="modal-title-button__wrapper"
  >
    <div
      class="v-tooltip"
      left=""
    >
      <button
        class="v-btn--minimize my-0 v-btn v-btn--icon v-btn--round theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light white--text"
            style="font-size: 36px;"
          >
            minimize
          </i>
        </span>
      </button>
      <span>
        You already have minimized modal window
      </span>
    </div>
  </div>
  <div
    class="modal-title-button__wrapper"
  >
    <button
      class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--light white--text"
          style="font-size: 36px;"
        >
          close
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`modal-title-buttons Renders \`modal-title-buttons\` with default props 1`] = `
<div
  class="modal-title-buttons"
>
  <!---->
  <!---->
</div>
`;

exports[`modal-title-buttons Renders \`modal-title-buttons\` with minimized modal 1`] = `
<div
  class="modal-title-buttons minimize"
>
  <div
    class="modal-title-button__wrapper"
  >
    <button
      class="v-btn-legacy-m--x v-btn v-btn--icon v-btn--round theme--light v-size--small"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--light white--text"
        >
          maximize
        </i>
      </span>
    </button>
  </div>
  <!---->
</div>
`;
